[tool.poetry]
name = "metaflow-flyte"
version = "0.0.1"
description = ""
authors = ["Jonathan Jin <me@jonathanj.in>"]

[tool.poetry.dependencies]
python = "^3.9"
flytekit = "^0.31.0"
metaflow = "^2.5.3"
python-lsp-server = "^1.4.0"
python-lsp-black = "^1.1.0"
pylsp-mypy = "^0.5.7"
pyls-isort = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "metaflow.*",
]
ignore_missing_imports = true